fixed form width bug on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 form {
-    min-width: 25em;
+    min-width: 20em;
 }
 
 .full-height {
